tests/resource/invalid/type/definition/reassign_non_mut_field.mamba
class A
    def my_num: Int <- 10


def mut a <- A()
a.my_num <- 20
